<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/countLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/baris_teks_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/count_0_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:clickable="true"
            android:onClick="button0_minus"
            android:paddingLeft="5dp"
            android:text="@string/count_0"
            android:textColor="@color/putih" />

        <TextView
            android:id="@+id/count_1_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_1" />

        <TextView
            android:id="@+id/count_2_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/baris_button_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".33" >

        <Button
            android:id="@+id/Button0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="button0_onclicked"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/Button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="button1_onclicked"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="button2_onclicked"
            android:text="@string/button_2" />
 

    </LinearLayout>

    <LinearLayout
        android:id="@+id/baris_teks_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/count_3_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_3"
            android:textColor="@color/putih" />

        <TextView
            android:id="@+id/count_4_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_4" />

        <TextView
            android:id="@+id/count_5_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/baris_button_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".33" >

        <Button
            android:id="@+id/Button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="button3_onclicked"
            android:text="@string/button_3" />


        <Button
            android:id="@+id/Button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="button4_onclicked"
            android:text="@string/button_4" />


        <Button
            android:id="@+id/Button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="button5_onclicked"
            android:text="@string/button_5" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/baris_teks_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/count_6_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_6"
            android:textColor="@color/putih" />

        <TextView
            android:id="@+id/count_7_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_7"
            android:textColor="@color/putih" />

        <TextView
            android:id="@+id/count_8_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingLeft="5dp"
            android:text="@string/count_8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".33"
        android:gravity="center_vertical|center_horizontal" >

        <Button
            android:id="@+id/Button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:onClick="button6_onclicked"
            android:text="@string/button_6" />


        <Button
            android:id="@+id/Button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:onClick="button7_onclicked"
            android:text="@string/button_7" />


        <Button
            android:id="@+id/Button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:onClick="button8_onclicked"
            android:text="@string/button_8" />


    </LinearLayout>

</LinearLayout>