<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReportActivity" >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/report_crew_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="Crew"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/report_waktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Waktu" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/kol1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <TableRow
            android:id="@+id/kol1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp" >

            <TextView
                android:id="@+id/jumlah_0"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_6"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_7"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/kol1_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/jumlah_8"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/kol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/kol1"
        android:layout_toRightOf="@+id/kol1"
        android:paddingTop="2dp" >

        <TableRow
            android:id="@+id/kol2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="0dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_0" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_1" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_2" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_3" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_4" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_5" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_6" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_7" />
        </TableRow>

        <TableRow
            android:id="@+id/kol2_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/menu_8" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/kol3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/kol2"
        android:layout_toRightOf="@+id/kol2"
        android:gravity="right"
        android:paddingTop="2dp" >

        <TableRow
            android:id="@+id/kol3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu0_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu1_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu2_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu3_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu4_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu5_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu6_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu7_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:id="@+id/kol3_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/totalmenu8_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="right|center_vertical"
                android:text="Total" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/kol1"
        android:layout_below="@+id/kol1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/total_penjualan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Total"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Report to Logs" />

    </LinearLayout>

</RelativeLayout>